logs/jouets.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Jouets-0.2.0.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/blessings'...
Listing './lib/python3.5/site-packages/blessings-1.6.1.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jouets'...
Listing './lib/python3.5/site-packages/jouets/aperitif'...
Listing './lib/python3.5/site-packages/jouets/aperitif/data'...
Listing './lib/python3.5/site-packages/jouets/chemin'...
Listing './lib/python3.5/site-packages/jouets/dobble'...
Listing './lib/python3.5/site-packages/jouets/dobble/memobble'...
Listing './lib/python3.5/site-packages/jouets/dobble/memobble/algo'...
Listing './lib/python3.5/site-packages/jouets/dobble/output'...
Listing './lib/python3.5/site-packages/jouets/dobble/output/latex'...
Listing './lib/python3.5/site-packages/jouets/dobble/output/latex/data'...
Listing './lib/python3.5/site-packages/jouets/dobble/output/latex/data/templates'...
Listing './lib/python3.5/site-packages/jouets/egyptienne'...
Listing './lib/python3.5/site-packages/jouets/erathostene'...
Listing './lib/python3.5/site-packages/jouets/fractale'...
Listing './lib/python3.5/site-packages/jouets/labyrinthe'...
Listing './lib/python3.5/site-packages/jouets/labyrinthe/data'...
Listing './lib/python3.5/site-packages/jouets/labyrinthe/data/templates'...
Listing './lib/python3.5/site-packages/jouets/labyrinthe/shapes'...
Listing './lib/python3.5/site-packages/jouets/labyrinthe/shapes/turtle'...
Listing './lib/python3.5/site-packages/jouets/mafia'...
Listing './lib/python3.5/site-packages/jouets/mafia/equilibre'...
Listing './lib/python3.5/site-packages/jouets/mafia/probadetective'...
Listing './lib/python3.5/site-packages/jouets/pestecholera'...
Listing './lib/python3.5/site-packages/jouets/pestecholera/cholera'...
Listing './lib/python3.5/site-packages/jouets/pestecholera/peste'...
Listing './lib/python3.5/site-packages/jouets/sudoku'...
Listing './lib/python3.5/site-packages/jouets/utils'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
